--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -27,6 +27,7 @@
 
   "categories.back": "Home",
 
+  "product.backarrow": "Go back",
   "product.notification": "Added to cart",
   "product.quantity": "Quantity",
   "product.button.add": "Add to cart",
