--- a/src/localization/ru.json
+++ b/src/localization/ru.json
@@ -27,6 +27,7 @@
 
   "categories.back": "Назад",
 
+  "product.backarrow": "Назад",
   "notification": "Добавлено в корзину",
   "product.quantity": "Количество",
   "product.button.add": "Добавить в корзину",
